# spill-the-beans

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  colab_setup.ipynb  pyproject.toml
LatexWriteup/: clean.sh  compile.sh  library.bib  main.tex  setup.md  watch.sh
results/final/: llama2-13b_20251028_153405.json  mistral-7b_20251028_140705.json  mixtral-8x7b_20251028_174031.json  solar-10.7b_20251028_150851.json  vicuna-13b_20251028_155931.json  wizardlm-13b_20251028_180747.json
results/final/original/: llama2-7b_20251028_134148.json
results/final/variation/: dense_retrieval_results.txt
src/: data_loader.py  dense_retrieval.py  evaluator.py  main.py  model.py  retrieval.py  view_results.py  wikiqa_loader.py
